2021-04-20 07:35  claudio

	* usr.sbin/slowcgi/slowcgi.c: Use LIST instead of SLIST for
	  requests. The way SLIST_REMOVE was used did a double traverse of
	  the list which now is replaced with no traversal at all.  Also
	  stop double wrapping requests just for the list.  OK millert@

2021-04-20 07:32  claudio

	* usr.sbin/slowcgi/slowcgi.c: Ignore SIGPIPE by default and restore
	  default behaviour before executing the CGI.  OK bluhm@ florian@

2021-01-08 22:05  millert

	* usr.sbin/slowcgi/slowcgi.c: accept_reserve() counter function
	  argument doesn't need to be volatile.  Revision 1.21 removed the
	  volatile from the cgi_inflight global but accept_reserve() was
	  not updated to match.  OK florian@

2020-05-11 10:40  claudio

	* usr.sbin/slowcgi/slowcgi.c: Allow specifying -d multiple times.
	  Only print the fcgi header data if debug > 1 (-dd) since it adds
	  a lot of noise to the output.  In syslog_debug do not check for
	  the debug variable instead let syslog handle it. Currently
	  syslog_debug() would never print anything since it is only called
	  with debug = 0 (debug > 0 implies the console logger).  OK
	  florian@

2020-05-08 07:41  claudio

	* usr.sbin/slowcgi/slowcgi.c: Just a bit of KNF.  OK florian@

2018-10-19 08:13  claudio

	* usr.sbin/slowcgi/slowcgi.c: When calculating the fd limit before
	  accepting a new connection also account for the inflight fds
	  caused by the new connection. Without this slowcgi could fail
	  when close to the limit because FD_RESERVE is smaller then
	  FD_NEEDED.  OK florian@, tested by Kristaps Dzonsons

2018-08-19 12:31  florian

	* usr.sbin/slowcgi/slowcgi.c: Call daemon with 0 as first argument
	  so that it changes the cwd to /.  It is not a problem in slowcgi
	  since it calls chroot(2) and then chdir(2) shortly afterwards but
	  hopefully prevents copying code into daemons where it does
	  matter.  Problem first observed by dlg in ntpd(8) which keeps